[project]
name = "jetbrains-ides-build-numbers"
version = "0.0.0"
description = "JetBrains IDEs' build numbers"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [
	{ name = "InSyncWithFoo", email = "insyncwithfoo@gmail.com" }
]
dependencies = [
    "packaging>=26.0",
    "pandas>=3.0.2",
    "pydantic>=2.12.5",
    "requests>=2.33.1",
    "tabulate>=0.10.0",
]

[dependency-groups]
dev = [
    "pandas-stubs>=3.0.0.260204",
]
